Fixing overlapping classes with Calendar and Index pages.

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,8 @@ input[type="submit"] {
 /*End Contact Form*/
 
 /*Student Calendar*/
-.row {
+
+.calendar-row {
   display: flex;
 }
 
